stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_ordering_list.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/ordering_list.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × ordering operands are not comparable
   ╭─[tests/fixtures/diagnostics/types/ordering_list.ml:2:7]
 1 │ fn main() {
 2 │   dbg([1, 2] < [1, 3])
   ·       ───────┬───────
   ·              ╰── left side has type `List<i64>`, but right side has type `List<i64>`
 3 │ }
   ╰────
  help: compare i64 values with i64 values or string values with string values
